--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -28,5 +28,5 @@ html {
 
 .item-bench input,
 .item-bench textarea {
-  @apply tw-bg-black tw-border-borderinput tw-border tw-py-1 tw-px-2 tw-text-lg
+  @apply tw-bg-black tw-border-borderinput tw-border tw-py-1 tw-px-2 tw-text-lg tw-min-w-2/3
 }
